tests/NormalTests/paczka1/small_fuzzy/47919705.err
Error in line 11: fTLJ9 A8D 59,0
Error in line 12: Aq21 Aq21 17q,5
Error in line 7: fw3JQLoOI A82 47,1
